Extended interface to retreive meta data
